@@ -55,19 +55,26 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		public String getSymbol() {
 			if (this == MILLIS) {
 				return "ms";
-			} else if (this == SECONDS) {
+			}
+			else if (this == SECONDS) {
 				return "s";
-			} else if (this == MINUTES) {
+			}
+			else if (this == MINUTES) {
 				return "min";
-			} else if (this == HOURS) {
+			}
+			else if (this == HOURS) {
 				return "h";
-			} else if (this == DAYS) {
+			}
+			else if (this == DAYS) {
 				return "d";
-			} else if (this == WEEKS) {
+			}
+			else if (this == WEEKS) {
 				return "w";
-			} else if (this == MONTHS) {
+			}
+			else if (this == MONTHS) {
 				return "m";
-			} else if (this == YEARS) {
+			}
+			else if (this == YEARS) {
 				return "y";
 			}
 			return "?";
@@ -76,19 +83,26 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		public String getLocalizedKey() {
 			if (this == MILLIS) {
 				return "millisecond";
-			} else if (this == SECONDS) {
+			}
+			else if (this == SECONDS) {
 				return "second";
-			} else if (this == MINUTES) {
+			}
+			else if (this == MINUTES) {
 				return "minute";
-			} else if (this == HOURS) {
+			}
+			else if (this == HOURS) {
 				return "hour";
-			} else if (this == DAYS) {
+			}
+			else if (this == DAYS) {
 				return "day";
-			} else if (this == WEEKS) {
+			}
+			else if (this == WEEKS) {
 				return "week";
-			} else if (this == MONTHS) {
+			}
+			else if (this == MONTHS) {
 				return "month";
-			} else if (this == YEARS) {
+			}
+			else if (this == YEARS) {
 				return "year";
 			}
 			return "?";
@@ -97,19 +111,26 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		public int getCalendarField() {
 			if (this == MILLIS) {
 				return Calendar.MILLISECOND;
-			} else if (this == SECONDS) {
+			}
+			else if (this == SECONDS) {
 				return Calendar.SECOND;
-			} else if (this == MINUTES) {
+			}
+			else if (this == MINUTES) {
 				return Calendar.MINUTE;
-			} else if (this == HOURS) {
+			}
+			else if (this == HOURS) {
 				return Calendar.HOUR;
-			} else if (this == DAYS) {
+			}
+			else if (this == DAYS) {
 				return Calendar.DAY_OF_YEAR;
-			} else if (this == WEEKS) {
+			}
+			else if (this == WEEKS) {
 				return Calendar.WEEK_OF_YEAR;
-			} else if (this == MONTHS) {
+			}
+			else if (this == MONTHS) {
 				return Calendar.MONTH;
-			} else if (this == YEARS) {
+			}
+			else if (this == YEARS) {
 				return Calendar.YEAR;
 			}
 			return -1;
@@ -121,88 +142,123 @@ public class Duration implements Cloneable, Comparable<Duration> {
 				if (oppositeUnit == MILLIS) {
 					return 1;
 				}
-			} else if (this == SECONDS) {
+			}
+			else if (this == SECONDS) {
 				if (oppositeUnit == MILLIS) {
 					return 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 1;
 				}
-			} else if (this == MINUTES) {
+			}
+			else if (this == MINUTES) {
 				if (oppositeUnit == MILLIS) {
 					return 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 1;
 				}
-			} else if (this == HOURS) {
+			}
+			else if (this == HOURS) {
 				if (oppositeUnit == MILLIS) {
 					return 60 * 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 60 * 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 60;
-				} else if (oppositeUnit == HOURS) {
+				}
+				else if (oppositeUnit == HOURS) {
 					return 1;
 				}
-			} else if (this == DAYS) {
+			}
+			else if (this == DAYS) {
 				if (oppositeUnit == MILLIS) {
 					return 24 * 60 * 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 24 * 60 * 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 24 * 60;
-				} else if (oppositeUnit == HOURS) {
+				}
+				else if (oppositeUnit == HOURS) {
 					return 24;
-				} else if (oppositeUnit == DAYS) {
+				}
+				else if (oppositeUnit == DAYS) {
 					return 1;
 				}
-			} else if (this == WEEKS) {
+			}
+			else if (this == WEEKS) {
 				if (oppositeUnit == MILLIS) {
 					return 7 * 24 * 60 * 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 7 * 24 * 60 * 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 7 * 24 * 60;
-				} else if (oppositeUnit == HOURS) {
+				}
+				else if (oppositeUnit == HOURS) {
 					return 7 * 24;
-				} else if (oppositeUnit == DAYS) {
+				}
+				else if (oppositeUnit == DAYS) {
 					return 7;
-				} else if (oppositeUnit == WEEKS) {
+				}
+				else if (oppositeUnit == WEEKS) {
 					return 1;
 				}
-			} else if (this == MONTHS) {
+			}
+			else if (this == MONTHS) {
 				if (oppositeUnit == MILLIS) {
 					return 30 * 24 * 60 * 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 30 * 24 * 60 * 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 30 * 24 * 60;
-				} else if (oppositeUnit == HOURS) {
+				}
+				else if (oppositeUnit == HOURS) {
 					return 30 * 24;
-				} else if (oppositeUnit == DAYS) {
+				}
+				else if (oppositeUnit == DAYS) {
 					return 30;
-				} else if (oppositeUnit == WEEKS) {
+				}
+				else if (oppositeUnit == WEEKS) {
 					return 4;
-				} else if (oppositeUnit == MONTHS) {
+				}
+				else if (oppositeUnit == MONTHS) {
 					return 1;
 				}
-			} else if (this == YEARS) {
+			}
+			else if (this == YEARS) {
 				if (oppositeUnit == MILLIS) {
 					return 365 * 24 * 60 * 60 * 1000;
-				} else if (oppositeUnit == SECONDS) {
+				}
+				else if (oppositeUnit == SECONDS) {
 					return 365 * 24 * 60 * 60;
-				} else if (oppositeUnit == MINUTES) {
+				}
+				else if (oppositeUnit == MINUTES) {
 					return 365 * 24 * 60;
-				} else if (oppositeUnit == HOURS) {
+				}
+				else if (oppositeUnit == HOURS) {
 					return 365 * 24;
-				} else if (oppositeUnit == DAYS) {
+				}
+				else if (oppositeUnit == DAYS) {
 					return 365;
-				} else if (oppositeUnit == WEEKS) {
+				}
+				else if (oppositeUnit == WEEKS) {
 					return 52;
-				} else if (oppositeUnit == MONTHS) {
+				}
+				else if (oppositeUnit == MONTHS) {
 					return 12;
-				} else if (oppositeUnit == YEARS) {
+				}
+				else if (oppositeUnit == YEARS) {
 					return 1;
 				}
 			}
@@ -300,12 +356,15 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		if (aDuration1.getUnit().ordinal() <= aDuration2.getUnit().ordinal()) {
 			minUnitDuration = aDuration1;
 			maxUnitDuration = aDuration2;
-		} else {
+		}
+		else {
 			minUnitDuration = aDuration2;
 			maxUnitDuration = aDuration1;
 		}
-		return new Duration(minUnitDuration.getValue() + maxUnitDuration.getValue()
-				* maxUnitDuration.getUnit().getCardinalityOf(minUnitDuration.getUnit()), minUnitDuration.getUnit());
+		return new Duration(
+				minUnitDuration.getValue()
+						+ maxUnitDuration.getValue() * maxUnitDuration.getUnit().getCardinalityOf(minUnitDuration.getUnit()),
+				minUnitDuration.getUnit());
 	}
 
 	public static Duration durationMinusDuration(Duration aDuration1, Duration aDuration2) {
@@ -314,12 +373,15 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		if (aDuration1.getUnit().ordinal() <= aDuration2.getUnit().ordinal()) {
 			minUnitDuration = aDuration1;
 			maxUnitDuration = aDuration2;
-		} else {
+		}
+		else {
 			minUnitDuration = aDuration2;
 			maxUnitDuration = aDuration1;
 		}
-		return new Duration(minUnitDuration.getValue() - maxUnitDuration.getValue()
-				* maxUnitDuration.getUnit().getCardinalityOf(minUnitDuration.getUnit()), minUnitDuration.getUnit());
+		return new Duration(
+				minUnitDuration.getValue()
+						- maxUnitDuration.getValue() * maxUnitDuration.getUnit().getCardinalityOf(minUnitDuration.getUnit()),
+				minUnitDuration.getUnit());
 	}
 
 	public boolean lessThan(Duration aDuration) {
@@ -344,6 +406,6 @@ public class Duration implements Cloneable, Comparable<Duration> {
 		if (returned != 0) {
 			return returned;
 		}
-		return new Long(getValue()).compareTo(new Long(o.getValue()));
+		return Long.valueOf(getValue()).compareTo(Long.valueOf(o.getValue()));
 	}
 }
