@@ -51,46 +51,46 @@ public class ConcatenedListTest {
 	public void testConcacList1() {
 		assertFalse(anotherElements.isEmpty());
 		assertEquals(11, anotherElements.size());
-		assertEquals(new Integer(11), anotherElements.get(0));
-		assertEquals(new Integer(5), anotherElements.get(1));
-		assertEquals(new Integer(7), anotherElements.get(2));
-		assertEquals(new Integer(3), anotherElements.get(3));
-		assertEquals(new Integer(12), anotherElements.get(4));
-		assertEquals(new Integer(13), anotherElements.get(5));
-		assertEquals(new Integer(14), anotherElements.get(6));
-		assertEquals(new Integer(3), anotherElements.get(7));
-		assertEquals(new Integer(5), anotherElements.get(8));
-		assertEquals(new Integer(7), anotherElements.get(9));
-		assertEquals(new Integer(15), anotherElements.get(10));
+		assertEquals(Integer.valueOf(11), anotherElements.get(0));
+		assertEquals(Integer.valueOf(5), anotherElements.get(1));
+		assertEquals(Integer.valueOf(7), anotherElements.get(2));
+		assertEquals(Integer.valueOf(3), anotherElements.get(3));
+		assertEquals(Integer.valueOf(12), anotherElements.get(4));
+		assertEquals(Integer.valueOf(13), anotherElements.get(5));
+		assertEquals(Integer.valueOf(14), anotherElements.get(6));
+		assertEquals(Integer.valueOf(3), anotherElements.get(7));
+		assertEquals(Integer.valueOf(5), anotherElements.get(8));
+		assertEquals(Integer.valueOf(7), anotherElements.get(9));
+		assertEquals(Integer.valueOf(15), anotherElements.get(10));
 	}
 
 	@Test
 	public void testConcacList2() {
 		assertFalse(yetAnotherElements.isEmpty());
 		assertEquals(21, yetAnotherElements.size());
-		assertEquals(new Integer(11), yetAnotherElements.get(0));
-		assertEquals(new Integer(5), yetAnotherElements.get(1));
-		assertEquals(new Integer(7), yetAnotherElements.get(2));
-		assertEquals(new Integer(3), yetAnotherElements.get(3));
-		assertEquals(new Integer(12), yetAnotherElements.get(4));
+		assertEquals(Integer.valueOf(11), yetAnotherElements.get(0));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(1));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(2));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(3));
+		assertEquals(Integer.valueOf(12), yetAnotherElements.get(4));
 
-		assertEquals(new Integer(11), yetAnotherElements.get(5));
-		assertEquals(new Integer(5), yetAnotherElements.get(6));
-		assertEquals(new Integer(7), yetAnotherElements.get(7));
-		assertEquals(new Integer(3), yetAnotherElements.get(8));
-		assertEquals(new Integer(12), yetAnotherElements.get(9));
-		assertEquals(new Integer(13), yetAnotherElements.get(10));
-		assertEquals(new Integer(14), yetAnotherElements.get(11));
-		assertEquals(new Integer(3), yetAnotherElements.get(12));
-		assertEquals(new Integer(5), yetAnotherElements.get(13));
-		assertEquals(new Integer(7), yetAnotherElements.get(14));
-		assertEquals(new Integer(15), yetAnotherElements.get(15));
+		assertEquals(Integer.valueOf(11), yetAnotherElements.get(5));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(6));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(7));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(8));
+		assertEquals(Integer.valueOf(12), yetAnotherElements.get(9));
+		assertEquals(Integer.valueOf(13), yetAnotherElements.get(10));
+		assertEquals(Integer.valueOf(14), yetAnotherElements.get(11));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(12));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(13));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(14));
+		assertEquals(Integer.valueOf(15), yetAnotherElements.get(15));
 
-		assertEquals(new Integer(14), yetAnotherElements.get(16));
-		assertEquals(new Integer(3), yetAnotherElements.get(17));
-		assertEquals(new Integer(5), yetAnotherElements.get(18));
-		assertEquals(new Integer(7), yetAnotherElements.get(19));
-		assertEquals(new Integer(15), yetAnotherElements.get(20));
+		assertEquals(Integer.valueOf(14), yetAnotherElements.get(16));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(17));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(18));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(19));
+		assertEquals(Integer.valueOf(15), yetAnotherElements.get(20));
 	}
 
 	@Test
@@ -99,31 +99,31 @@ public class ConcatenedListTest {
 		assertEquals(21, yetAnotherElements.size());
 		yetAnotherElements.add(0, 6);
 		yetAnotherElements.add(2, 1);
-		assertEquals(new Integer(6), yetAnotherElements.get(0));
-		assertEquals(new Integer(11), yetAnotherElements.get(1));
-		assertEquals(new Integer(1), yetAnotherElements.get(2));
-		assertEquals(new Integer(5), yetAnotherElements.get(3));
-		assertEquals(new Integer(7), yetAnotherElements.get(4));
-		assertEquals(new Integer(3), yetAnotherElements.get(5));
-		assertEquals(new Integer(12), yetAnotherElements.get(6));
+		assertEquals(Integer.valueOf(6), yetAnotherElements.get(0));
+		assertEquals(Integer.valueOf(11), yetAnotherElements.get(1));
+		assertEquals(Integer.valueOf(1), yetAnotherElements.get(2));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(3));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(4));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(5));
+		assertEquals(Integer.valueOf(12), yetAnotherElements.get(6));
 
-		assertEquals(new Integer(11), yetAnotherElements.get(7));
-		assertEquals(new Integer(5), yetAnotherElements.get(8));
-		assertEquals(new Integer(7), yetAnotherElements.get(9));
-		assertEquals(new Integer(3), yetAnotherElements.get(10));
-		assertEquals(new Integer(12), yetAnotherElements.get(11));
-		assertEquals(new Integer(13), yetAnotherElements.get(12));
-		assertEquals(new Integer(14), yetAnotherElements.get(13));
-		assertEquals(new Integer(3), yetAnotherElements.get(14));
-		assertEquals(new Integer(5), yetAnotherElements.get(15));
-		assertEquals(new Integer(7), yetAnotherElements.get(16));
-		assertEquals(new Integer(15), yetAnotherElements.get(17));
+		assertEquals(Integer.valueOf(11), yetAnotherElements.get(7));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(8));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(9));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(10));
+		assertEquals(Integer.valueOf(12), yetAnotherElements.get(11));
+		assertEquals(Integer.valueOf(13), yetAnotherElements.get(12));
+		assertEquals(Integer.valueOf(14), yetAnotherElements.get(13));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(14));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(15));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(16));
+		assertEquals(Integer.valueOf(15), yetAnotherElements.get(17));
 
-		assertEquals(new Integer(14), yetAnotherElements.get(18));
-		assertEquals(new Integer(3), yetAnotherElements.get(19));
-		assertEquals(new Integer(5), yetAnotherElements.get(20));
-		assertEquals(new Integer(7), yetAnotherElements.get(21));
-		assertEquals(new Integer(15), yetAnotherElements.get(22));
+		assertEquals(Integer.valueOf(14), yetAnotherElements.get(18));
+		assertEquals(Integer.valueOf(3), yetAnotherElements.get(19));
+		assertEquals(Integer.valueOf(5), yetAnotherElements.get(20));
+		assertEquals(Integer.valueOf(7), yetAnotherElements.get(21));
+		assertEquals(Integer.valueOf(15), yetAnotherElements.get(22));
 	}
 
 	@Test
@@ -136,18 +136,18 @@ public class ConcatenedListTest {
 	public void testElementsAddedInOrder() {
 		assertFalse(threeElementsInOrder.isEmpty());
 		assertEquals(3, threeElementsInOrder.size());
-		assertEquals(new Integer(5), threeElementsInOrder.get(0));
-		assertEquals(new Integer(7), threeElementsInOrder.get(1));
-		assertEquals(new Integer(3), threeElementsInOrder.get(2));
+		assertEquals(Integer.valueOf(5), threeElementsInOrder.get(0));
+		assertEquals(Integer.valueOf(7), threeElementsInOrder.get(1));
+		assertEquals(Integer.valueOf(3), threeElementsInOrder.get(2));
 	}
 
 	@Test
 	public void testElementsAddedNotInOrder() {
 		assertFalse(threeElementsNotInOrder.isEmpty());
 		assertEquals(3, threeElementsNotInOrder.size());
-		assertEquals(new Integer(3), threeElementsNotInOrder.get(0));
-		assertEquals(new Integer(5), threeElementsNotInOrder.get(1));
-		assertEquals(new Integer(7), threeElementsNotInOrder.get(2));
+		assertEquals(Integer.valueOf(3), threeElementsNotInOrder.get(0));
+		assertEquals(Integer.valueOf(5), threeElementsNotInOrder.get(1));
+		assertEquals(Integer.valueOf(7), threeElementsNotInOrder.get(2));
 	}
 
 	// add tests for iterating over the lists
